fix button issue, wrapped buttons with spans in TestPage

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,6 @@
   border-radius: 5rem;
   display: inline-block;
   height: 60px;
-  margin-right: 3rem;
   text-align: center;
   text-decoration: none;
   width: 180px;
